--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -2,7 +2,7 @@
     <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>BBH Dashboard</title>
+        <title>PMO 360</title>
         <base href="/">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
